--- a/main.html
+++ b/main.html
@@ -8,6 +8,27 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Feedback Form</h1>
+	<form method="post">
+		<div>
+		<label for="name" >Name</label>
+		<input id="name" type="text" minlength="2" maxlength="50" />
+		</div>
+
+		<div>
+			<label for="portfolio">Portfolio</label>
+			<input id="portfoloio" type="url">
+		</div>
+				<div>
+			<label for="favcolor">Favcolor</label>
+			<input id="favColor" type="color">
+		</div>
+				<div>
+			<label for="likeness">Likeness</label>
+			<input id="likeness" type="range" min="1" max="100">
+		</div>
+			
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
